// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the P component should accept and render passed in styles 1`] = `
<p
  className="sc-1ec6ydc-0 gyeIME"
>
  But I, brothers, could not address you as spiritual people, but as people of the flesh, as infants in Christ. I fed you with milk, not solid food, for you were not ready for it. And even now you are not yet ready, for you are still of the flesh. For while there is jealousy and strife among you, are you not of the flesh and behaving only in a human way? For when one says, "I follow Paul," and another, "I follow Apollos," are you not being merely human?
</p>
`;

exports[`the P component should render 1`] = `
<p
  className="sc-1ec6ydc-0 fCPYIq"
>
  But I, brothers, could not address you as spiritual people, but as people of the flesh, as infants in Christ. I fed you with milk, not solid food, for you were not ready for it. And even now you are not yet ready, for you are still of the flesh. For while there is jealousy and strife among you, are you not of the flesh and behaving only in a human way? For when one says, "I follow Paul," and another, "I follow Apollos," are you not being merely human?
</p>
`;

exports[`the P component should render a loading state 1`] = `
Array [
  <mark
    className="ra2rjz-0 gKAxvi show-loading-animation uz4va7-0 kuWJia ui-kit.Placeholder.ParagraphLine ui-kit.Placeholder.Line custom-placeholder"
    width="85%"
  />,
  <mark
    className="ra2rjz-0 gcMOrm show-loading-animation uz4va7-0 kuWJia ui-kit.Placeholder.ParagraphLine ui-kit.Placeholder.Line custom-placeholder"
    width="100%"
  />,
  <mark
    className="ra2rjz-0 gKBPER show-loading-animation uz4va7-0 kuWJia ui-kit.Placeholder.ParagraphLine ui-kit.Placeholder.Line custom-placeholder"
    width="75%"
  />,
]
`;
